fix align issue

--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -5,6 +5,7 @@
   width: 40rem;
   height: 30rem;
   padding-top: 9rem;
+  margin-left: 4rem;
 
   h2 {
     padding-top: 1rem;
@@ -17,8 +18,9 @@
 }
 
 .main-points-container {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
   position: relative;
   transition: transform 0.5s ease;
 
@@ -57,6 +59,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: 4rem;
 
   .main-image {
   max-width: 95%;
