--- a/client/src/pages/Saved/saved.scss
+++ b/client/src/pages/Saved/saved.scss
@@ -46,17 +46,15 @@
     width: 40rem;
     height: 20rem;
     padding-top: 5rem;
-    // margin-left: 4rem;
+    margin-left: 4rem;
    }
 }
 
 .saved-jobs {
   padding-top: 0.5rem;
+  margin-left: 4rem;
 
-  // padding-top: 0.5rem;
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
+
 }
 
 
